# builder

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRD.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  docs.md  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
scripts/: health-check.sh  init-postgres.sql
src/despiece_bot/: __init__.py  config.py  hello_ai.py  main.py
